--- a/.config/waybar/modules.jsonc
+++ b/.config/waybar/modules.jsonc
@@ -1,63 +1,79 @@
 {
     "hyprland/workspaces": {
         "format": "{icon}",
-        "persistent-workspaces": { "*": 5 },
-        "cursor" : true,
+        "persistent-workspaces": {
+            "*": 5
+        },
+        "cursor": true,
         "format-icons": {
             "active": "󰣇",
             "persistent": "",
             "empty": ""
-         }
+        }
     },
-
-    "hyprland/window" : {
+    "hyprland/window": {
         "max-length": 45
     },
-
     "cpu": {
         "interval": 10,
-        "format":" {usage}%",
+        "format": " {usage}%",
         "states": {
             "warning": 80,
             "critical": 90
         }
     },
-
-    "tray" : {
+    "tray": {
         "icon-size": 13,
         "spacing": 10,
         "cursor": true
     },
-
     "load": {
         "interval": 10,
         "format": " {load1}",
         "cursor": true
     },
-
-    "memory": {
-        "interval": 10,
-        "format": "  {used:0.1f}G/{total:0.1f}G",
-        "states": {
-            "warning": 80,
-            "critical": 90
-        }
+    "group/gright1": {
+        "orientation": "horizontal",
+        "modules": [
+            "custom/net_speed",
+            "temperature",
+            "tray"
+        ]
     },
-
     "temperature": {
         "interval": 10,
         "format": "{icon} {temperatureC}°",
         "critical-threshold": 90,
-        "format-icons": ["","","","",""]	
+        "format-icons": [
+            "",
+            "",
+            "",
+            "",
+            ""
+        ]
     },
-
     "backlight": {
-        "scroll-step" : 2,
+        "scroll-step": 2,
         "format": "{icon} {percent}%",
-        "tooltip-format" : "{percent}%",
-        "format-icons": ["","","","","","","","","","","","","","",""]
+        "tooltip-format": "{percent}%",
+        "format-icons": [
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            ""
+        ]
     },
-
     "wireplumber": {
         "format": "{icon}  {volume}%",
         "format-bluetooth": "{icon} {volume}%",
@@ -71,30 +87,32 @@
             "headset": "",
             "headphone-muted": "󰟎",
             "headset-muted": "󰟎",
-            "default": ["", ""],
+            "default": [
+                "",
+                ""
+            ],
             "default-muted": "󰖁"
         }
     },
-
     "network": {
         "interval": 10,
-        "format-wifi": "  {essid} {signalStrength} ",
+        "format-wifi": "  {essid} {signalStrength}%",
         "format-ethernet": "󱓞 Wired connection",
-        "format-disconnected": "",
+        "format-disconnected": " Disconnected",
+        "tooltip": false,
+        "on-click": "~/.config/waybar/scripts/wifi-rofi.sh"
     },
-
     "bluetooth": {
         "format": "{}",
         "format-on": "󰂰  <i>Active...</i>",
         "format-off": "󰂲",
-        "format-disabled" : "󰂲",
-        "format-connected" : "{device_alias}    {device_battery_percentage}%",
+        "format-disabled": "󰂲",
+        "format-connected": "{device_alias}    {device_battery_percentage}%",
         "tooltip-format": "{device_enumerate}",
         "tooltip-format-enumerate-connected": "{device_alias}",
         "tooltip-format-enumerate-connected-battery": "{device_alias}\t {device_battery_percentage}%",
         "on-click-right": "hyprctl dispatch exec blueman-manager"
     },
-
     "battery": {
         "interval": 20,
         "full-at": 100,
@@ -103,13 +121,22 @@
         "format": "{icon} {capacity}%",
         "format-time": "{H}:{M:02}",
         "format-charging": " {capacity}% ({time})",
-        "format-icons": ["󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂂", "󰁹"],
+        "format-icons": [
+            "󰁺",
+            "󰁻",
+            "󰁼",
+            "󰁽",
+            "󰁾",
+            "󰁿",
+            "󰂀",
+            "󰂂",
+            "󰁹"
+        ],
         "states": {
             "warning": 30,
             "critical": 15
         }
     },
-
     "clock": {
         "timezone": "Asia/Almaty",
         "tooltip-format": "<tt><small>{calendar}</small></tt>",
@@ -121,20 +148,18 @@
                 "months": "<b>{}</b>",
                 "days": "<span color='#acb0d0'><b>{}</b></span>",
                 "today": "<span color='#41a6b5'><b><u>{}</u></b></span>"
-		    }
+            }
         }
     },
-
     "mpris": {
         "format": "{artist} - {title}",
-        "tooltip-format" : "{album}",
+        "tooltip-format": "{album}",
         "format-paused": " {artist} - {title}",
         "on-click": "playerctl play-pause",
         "on-scroll-up": "playerctl previous",
         "on-scroll-down": "playerctl next",
         "max-length": 45
     },
-
     "power-profiles-daemon": {
         "format": "{icon}",
         "tooltip-format": "Power profile: {profile}",
@@ -144,10 +169,34 @@
             "power-saver": "󰂄"
         }
     },
-
-    "custom/ctlcenter" : {
-        "tooltip" : false,
-        "format" : "󰐥",
-        "on-click" : "shutdown -h now",
+    "custom/logout": {
+        "format": "󰍃",
+        "format-alt": "Logout",
+        "tooltip": true,
+        "on-click": "hyprctl dispatch exit"
+    },
+    "custom/reboot": {
+        "format": "󰜉",
+        "format-alt": "Reboot",
+        "tooltip": true,
+        "on-click": "systemctl reboot"
+    },
+    "custom/poweroff": {
+        "format": "",
+        "format-alt": "Poweroff",
+        "tooltip": true,
+        "on-click": "systemctl poweroff"
+    },
+    "custom/net_speed": {
+        "format": "{}",
+        "interval": 1,
+        "exec": "~/.config/waybar/scripts/net_speed.sh",
+        "on-click": "gnome-terminal -- bash -c 'sudo iftop; exec bash'",
+        "tooltip": false
+    },
+    "custom/net_speed": {
+        "format": "{}",
+        "exec": "~/.config/waybar/scripts/net_speed.sh",
+        "interval": 1
     }
 }
